Fixes to several issues
1. Fixed footer layout problem
2. Fixed Datavaalit-link
3. FIxed project urls

--- a/assets/themes/louhos/css/layout.css
+++ b/assets/themes/louhos/css/layout.css
@@ -5,13 +5,6 @@
  *
  * Adapted from following sources:
  *
- * Skeleton V1.1
- * Copyright 2011, Dave Gamache
- * www.getskeleton.com
- * Free to use under the MIT license.
- * http://www.opensource.org/licenses/mit-license.php
- * 8/17/2011
- *
  * Jekyll-Bootstrap framework V0.2.9
  * Copyright 2011, Jade Dominguez
  * http://jekyllbootstrap.com/
@@ -32,6 +25,9 @@
 
 #wrapper {
 	min-height: 100%;
+    height: auto !important; /* ie7 fix */
+    height: 100%;
+    margin: 0 auto 0;
 }
 
 #footer {
@@ -40,7 +36,7 @@
 	text-shadow: rgba(255, 254, 255, 0.73) 0 1px 1px;
 	text-align: center;
 	height: 85px;
-	margin: -80px 0 0 0;
+	margin: 0 0 0 0;
 	padding: 25px 0 0 0;
 	position: relative;
 	clear:both;
